2005-11-01  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* doc/ja_JP.eucJP/README.tk : not -itt but -ikt
	  (thanks AOKI Taichi @naist)

2005-10-31  Stas Sergeev <stsp@aknet.ru>

	* interface/server_c.c : fix for timing bugs

2005-10-31  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Change a bit

2005-10-31  Keishi Suenaga <s_keishi@mutt.freemail.ne.jp>

	* Makefile.am, configure.in, doc/C/README.w32, timidity/Makefile.am,
	  timidity/timidity.c: Changed files
	* windrv/Makefile.am, windrv/dlldata.c, windrv/oemsetup.inf,
	  windrv/timiditydrv.cpp, windrv/timiditydrv.def,
	  windrv/timiditydrv.h, windrv/timiditydrv.i,
	  windrv/timiditydrv.idl, windrv/timiditydrv.inf,
	  windrv/timiditydrv_i.c, windrv/timiditydrv_p.c,
	  windrv/timiwp_timidity.c, windrv/timiwp_timidity.h:
	  Windows Driver merged (New files)

2005-10-31  Keishi Suenaga <s_keishi@mutt.freemail.ne.jp>

	* timidity/portaudio_a.c: for ASIO4ALL fix
	* interface/rtsyn.h, interface/rtsyn_common.c: Change a bit

2005-10-30  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c, timidity/sndfont.c, timidity/timidity.c:
	  Change a bit

2005-10-28  Keishi Suenaga <s_keishi@mutt.freemail.ne.jp>

	* timidity/w32_gogo.h: small fix
	* interface/w32g_utl.c, interface/w32g_syn.c: changes for gcc4 windows
	* interface/rtsyn_portmidi.c, interface/rtsyn_winmm.c,
	  timidity/playmidi.c, interface/rtsyn.h, timidity/instrum.h,
	  timidity/sndfont.c, interface/rtsyn_common.c, timidity/timidity.c:
	  New version of windows synthesizer mode. (new windows synth.)
	  Introduce --rtsyn-latency=(seconds) long-option.
	* doc/C/README.w32, doc/ja_JP.eucJP/README.w32: correlated changes.

2005-10-22  Stas Sergeev <stsp@aknet.ru>

	* interface/server_c.c: fix for cmd_setbuf

2005-09-30  Stas Sergeev <stsp@aknet.ru>

	* interface/xaw_i.c, interface/server_c.c, interface/soundspec.c,
	  interface/motif_i.c, libarc/url_newsgroup.c, libarc/url_http.c,
	  libarc/url.c, libarc/url_ftp.c, libarc/url_file.c,